--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 * {
     box-sizing: border-box;
@@ -96,6 +97,7 @@ body {
 
 .sosmed > a {
     color: rgba(0,0,0,0);
+    margin-right: 3px;
 }
 
 .sosmed > a > img {
